[gd_scene load_steps=9 format=3 uid="uid://bg6n0slpar7eg"]

[ext_resource type="Shader" path="res://shaders/transparent_mesh.gdshader" id="1_rxhna"]
[ext_resource type="Texture2D" uid="uid://cgkcggr4imqbd" path="res://assets/art/tree/tree.png" id="2_vcnfd"]
[ext_resource type="Script" path="res://utilities/sprite_3d/vertical_sprite_3d.gd" id="3_wcy8c"]
[ext_resource type="Texture2D" uid="uid://cb04st06nawde" path="res://assets/art/shadow/shadow.png" id="4_2jx2n"]
[ext_resource type="Script" path="res://utilities/shadow/shadow.gd" id="5_mldb1"]
[ext_resource type="Script" path="res://utilities/entity_detector/curved_entity_detector.gd" id="6_6rk15"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c5b34"]
render_priority = 0
shader = ExtResource("1_rxhna")
shader_parameter/opacity = 1.0
shader_parameter/sprite_texture = ExtResource("2_vcnfd")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_e82wr"]
points = PackedVector3Array(0, 0, 0, 1.58, 0, 0, 1.58, 2.4, 0, 0, 2.4, 0, 0, 0, -6.59439, 1.58, 0, -6.59439)

[node name="Tree" type="Sprite3D"]
layers = 2
material_override = SubResource("ShaderMaterial_c5b34")
cast_shadow = 0
offset = Vector2(0, 120)
texture = ExtResource("2_vcnfd")
script = ExtResource("3_wcy8c")

[node name="Shadow3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
cast_shadow = 3
axis = 1
double_sided = false
alpha_cut = 1
texture_filter = 0
texture = ExtResource("4_2jx2n")
script = ExtResource("5_mldb1")

[node name="CurvedEntityDetector" type="Area3D" parent="." node_paths=PackedStringArray("_sprites")]
monitorable = false
script = ExtResource("6_6rk15")
_sprites = [NodePath("..")]

[node name="@CollisionShape3D@24656" type="CollisionShape3D" parent="CurvedEntityDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.79, 0, 0)
shape = SubResource("ConvexPolygonShape3D_e82wr")

[connection signal="entity_detected" from="CurvedEntityDetector" to="." method="_on_entity_detected"]
[connection signal="entity_lost" from="CurvedEntityDetector" to="." method="_on_entity_lost"]
